# ALG_C

./: Cargo.toml  readme.md
src/: main.rs  test_string.txt  test_string_utf8.txt
src/encoding/: encoded_chunk.rs  encoding_funcs.rs  mod.rs
