[package]
name = "alg_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.test]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.